VS code formating

--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
 
     <!-- ------ -->
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
-    
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css"
+        integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js"
+        integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P"
+        crossorigin="anonymous"></script>
+
     <!-- ------ -->
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -127,13 +134,15 @@
             <div class="card-body">
                 <p class="card-text">
                     <p>
-                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#labo" aria-expanded="false" aria-controls="labo">
+                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#labo"
+                            aria-expanded="false" aria-controls="labo">
                             <i class="material-icons d-block">description</i>
                         </button>
                     </p>
                     <div class="collapse" id="labo">
                         <div class="card card-body bg-primary w-100 m-0">
-                            C'est le lieux où se déroulent tout les cours L'entrée est par derriere en passant par un grillage et le "basement" se trouve
+                            C'est le lieux où se déroulent tout les cours L'entrée est par derriere en passant par un
+                            grillage et le "basement" se trouve
                             au sous-sol
                         </div>
                     </div>
@@ -170,14 +179,15 @@
             <div class="card-body">
                 <p class="card-text">
                     <p>
-                        <button class="btn btn-warning text-white" type="button" data-toggle="collapse" data-target="#pizza" aria-expanded="false"
-                            aria-controls="pizza">
+                        <button class="btn btn-warning text-white" type="button" data-toggle="collapse"
+                            data-target="#pizza" aria-expanded="false" aria-controls="pizza">
                             <i class="material-icons d-block">description</i>
                         </button>
                     </p>
                     <div class="collapse" id="pizza">
                         <div class="card card-body bg-warning w-100 m-0">
-                            Une pizzeria très sympathique et décontractée avec des prix vraiment bas 7€ la margarita + le coca par exemple
+                            Une pizzeria très sympathique et décontractée avec des prix vraiment bas 7€ la margarita +
+                            le coca par exemple
                         </div>
                     </div>
                 </p>
@@ -185,7 +195,8 @@
             <ul class="list-group list-group-flush">
                 <li class="list-group-item bg-warning">
                     <a href="https://goo.gl/maps/NXo48aBfmMK2" target="_blank" class="badge badge-warning text-white">
-                        <i class="material-icons d-block">place</i> Friča Brīvzemnieka iela 36, Liepāja, LV-3401, Lettonie
+                        <i class="material-icons d-block">place</i> Friča Brīvzemnieka iela 36, Liepāja, LV-3401,
+                        Lettonie
                     </a>
                 </li>
                 <li class="list-group-item bg-warning">
@@ -213,14 +224,17 @@
             <div class="card-body">
                 <p class="card-text">
                     <p>
-                        <button class="btn btn-success" type="button" data-toggle="collapse" data-target="#dortoir" aria-expanded="false" aria-controls="dortoir">
+                        <button class="btn btn-success" type="button" data-toggle="collapse" data-target="#dortoir"
+                            aria-expanded="false" aria-controls="dortoir">
                             <i class="material-icons d-block">description</i>
                         </button>
                     </p>
                     <div class="collapse" id="dortoir">
                         <div class="card card-body bg-success w-100 m-0">
-                            Dortoir bas de gamme, qui ne coute vraiment pas cher, mais qui à des douches et des toilettes horribles Les chambres sont
-                            correctes, une salle de sport existe, une salle pour entreposer son vélo Il est possible de laver
+                            Dortoir bas de gamme, qui ne coute vraiment pas cher, mais qui à des douches et des
+                            toilettes horribles Les chambres sont
+                            correctes, une salle de sport existe, une salle pour entreposer son vélo Il est possible de
+                            laver
                             ses vetements contre 1.50€ la machine
                         </div>
                     </div>
@@ -257,14 +271,15 @@
             <div class="card-body">
                 <p class="card-text">
                     <p>
-                        <button class="btn btn-warning text-white" type="button" data-toggle="collapse" data-target="#supernetto" aria-expanded="false"
-                            aria-controls="supernetto">
+                        <button class="btn btn-warning text-white" type="button" data-toggle="collapse"
+                            data-target="#supernetto" aria-expanded="false" aria-controls="supernetto">
                             <i class="material-icons d-block">description</i>
                         </button>
                     </p>
                     <div class="collapse" id="supernetto">
                         <div class="card card-body bg-warning w-100 m-0">
-                            A utiliser qu'en cas d'urgence, le choix est limité, préferrez les grandes surfaces (moins cher et plus de choix)
+                            A utiliser qu'en cas d'urgence, le choix est limité, préferrez les grandes surfaces (moins
+                            cher et plus de choix)
                         </div>
                     </div>
 
@@ -302,7 +317,8 @@
             <div class="card-body">
                 <p class="card-text">
                     <p>
-                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#universite" aria-expanded="false" aria-controls="universite">
+                        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#universite"
+                            aria-expanded="false" aria-controls="universite">
                             <i class="material-icons d-block">description</i>
                         </button>
                     </p>
@@ -344,14 +360,15 @@
             <div class="card-body">
                 <p class="card-text">
                     <p>
-                        <button class="btn btn-warning text-white" type="button" data-toggle="collapse" data-target="#kurzeme" aria-expanded="false"
-                            aria-controls="kurzeme">
+                        <button class="btn btn-warning text-white" type="button" data-toggle="collapse"
+                            data-target="#kurzeme" aria-expanded="false" aria-controls="kurzeme">
                             <i class="material-icons d-block">description</i>
                         </button>
                     </p>
                     <div class="collapse" id="kurzeme">
                         <div class="card card-body bg-warning w-100 m-0">
-                            Centre commercial placé dans le centre ville Ideal pour s'acheter un repas le midi ou une vienoiserie
+                            Centre commercial placé dans le centre ville Ideal pour s'acheter un repas le midi ou une
+                            vienoiserie
                         </div>
                     </div>
                 </p>
@@ -387,14 +404,15 @@
             <div class="card-body">
                 <p class="card-text">
                     <p>
-                        <button class="btn btn-warning text-white" type="button" data-toggle="collapse" data-target="#rimi" aria-expanded="false"
-                            aria-controls="rimi">
+                        <button class="btn btn-warning text-white" type="button" data-toggle="collapse"
+                            data-target="#rimi" aria-expanded="false" aria-controls="rimi">
                             <i class="material-icons d-block">description</i>
                         </button>
                     </p>
                     <div class="collapse" id="rimi">
                         <div class="card card-body bg-warning w-100 m-0">
-                            L'un des plus grand centre commercial de la ville Il regorge de boutiques et propose un grand choix ainsi que des prix les
+                            L'un des plus grand centre commercial de la ville Il regorge de boutiques et propose un
+                            grand choix ainsi que des prix les
                             plus bas
                         </div>
                     </div>
@@ -431,7 +449,8 @@
             <div class="card-body">
                 <p class="card-text">
                     <p>
-                        <button class="btn btn-success" type="button" data-toggle="collapse" data-target="#ss" aria-expanded="false" aria-controls="ss">
+                        <button class="btn btn-success" type="button" data-toggle="collapse" data-target="#ss"
+                            aria-expanded="false" aria-controls="ss">
                             <i class="material-icons d-block">description</i>
                         </button>
                     </p>
@@ -444,7 +463,8 @@
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item bg-success">
-                    <a href="https://www.ss.com/lv/real-estate/flats/liepaja-and-reg/liepaja/" target="_blank" class="badge badge-success">
+                    <a href="https://www.ss.com/lv/real-estate/flats/liepaja-and-reg/liepaja/" target="_blank"
+                        class="badge badge-success">
                         <i class="material-icons d-block">link</i> ss.com/lv/real-estate/flats/liepaja-and-reg/liepaja/
                     </a>
                 </li>
@@ -463,13 +483,15 @@
             <div class="card-body">
                 <p class="card-text">
                     <p>
-                        <button class="btn btn-danger" type="button" data-toggle="collapse" data-target="#transports" aria-expanded="false" aria-controls="transports">
+                        <button class="btn btn-danger" type="button" data-toggle="collapse" data-target="#transports"
+                            aria-expanded="false" aria-controls="transports">
                             <i class="material-icons d-block">description</i>
                         </button>
                     </p>
                     <div class="collapse" id="transports">
                         <div class="card card-body bg-danger w-100 m-0">
-                            Site indispensable qui vous aidera à vous dépatouiller lors de vos deplacements dans la ville
+                            Site indispensable qui vous aidera à vous dépatouiller lors de vos deplacements dans la
+                            ville
                         </div>
                     </div>
                 </p>
@@ -495,13 +517,15 @@
             <div class="card-body">
                 <p class="card-text">
                     <p>
-                        <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#wiki" aria-expanded="false" aria-controls="wiki">
+                        <button class="btn btn-info" type="button" data-toggle="collapse" data-target="#wiki"
+                            aria-expanded="false" aria-controls="wiki">
                             <i class="material-icons d-block">description</i>
                         </button>
                     </p>
                     <div class="collapse" id="wiki">
                         <div class="card card-body bg-info w-100 m-0">
-                            Un wiki fait par une personne qui à été sur place, donc les informations sont tres interessantes A lire avant de partir
+                            Un wiki fait par une personne qui à été sur place, donc les informations sont tres
+                            interessantes A lire avant de partir
                         </div>
                     </div>
                 </p>
@@ -527,13 +551,15 @@
             <div class="card-body">
                 <p class="card-text">
                     <p>
-                        <button class="btn btn-danger" type="button" data-toggle="collapse" data-target="#interville" aria-expanded="false" aria-controls="interville">
+                        <button class="btn btn-danger" type="button" data-toggle="collapse" data-target="#interville"
+                            aria-expanded="false" aria-controls="interville">
                             <i class="material-icons d-block">description</i>
                         </button>
                     </p>
                     <div class="collapse" id="interville">
                         <div class="card card-body bg-danger w-100 m-0">
-                            Site indispensable pour trouver un bus qui vas faire la liaison entre Riga et Liepaja et inversement
+                            Site indispensable pour trouver un bus qui vas faire la liaison entre Riga et Liepaja et
+                            inversement
                         </div>
                     </div>
                 </p>
@@ -567,20 +593,23 @@
             <div class="card-body">
                 <p class="card-text">
                     <p>
-                        <button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#github" aria-expanded="false" aria-controls="github">
+                        <button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#github"
+                            aria-expanded="false" aria-controls="github">
                             <i class="material-icons d-block">description</i>
                         </button>
                     </p>
                     <div class="collapse" id="github">
                         <div class="card card-body bg-dark w-100 m-0">
-                            Vous pouvez modifier ou ajouter des informations sur ce site - Les fichiers HTML et CSS se trouvent à cette adresse
+                            Vous pouvez modifier ou ajouter des informations sur ce site - Les fichiers HTML et CSS se
+                            trouvent à cette adresse
                         </div>
                     </div>
                 </p>
             </div>
             <ul class="list-group list-group-flush">
                 <li class="list-group-item bg-dark">
-                    <a href="https://github.com/AlexQuiniou/bienvenue-a-liepaja" target="_blank" class="badge badge-dark">
+                    <a href="https://github.com/AlexQuiniou/bienvenue-a-liepaja" target="_blank"
+                        class="badge badge-dark">
                         <i class="material-icons d-block">link</i> github.com/AlexQuiniou/bienvenue-a-liepaja
                     </a>
                 </li>
